todo: content area

--- a/src/css/input-area.css
+++ b/src/css/input-area.css
@@ -5,6 +5,7 @@
     background-color:black;
     opacity: 1;
     color: var(--inputTextColor);
+    font-family: "Cascadia Code";
 }
 
 .no-outline{
