--- a/src/css/wrapper.css
+++ b/src/css/wrapper.css
@@ -1,3 +1,12 @@
 .wrapper {
-    padding: 1em
+    padding: 1em;
+    text-align: left;
+}
+
+.work-content-class{
+   
+}
+
+.hidden {
+    display: none
 }
