--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,6 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Cascadia Code";
   background-color: #393939;
   color: var(--color);
 
@@ -21,5 +17,5 @@ code {
   display:flex;
   justify-content: center;
   align-items: center;
-  height: 100vh
+  height: 100vh;
 }
